--- a/index/index.html
+++ b/index/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Restaurant Login & Signup</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -14,34 +14,29 @@
       <span class="close" id="closeSignup">&times;</span>
       <h2>Signup</h2>
       <form id="signupForm" action="signup.php" method="POST">
-        <input type="text" name="name" placeholder="Full Name" required><br>
-        <input type="email" name="email" placeholder="Email" required><br>
-        <input type="password" name="password" placeholder="Password" required><br>
-        <input type="text" name="phone" placeholder="Phone Number"><br>
-        <textarea name="address" placeholder="Address"></textarea><br>
+        <input type="text" name="name" placeholder="Full Name" required />
+        <input type="email" name="email" placeholder="Email" required />
+        <input type="password" name="password" placeholder="Password" required />
+        <input type="text" name="phone" placeholder="Phone Number" />
+        <textarea name="address" placeholder="Address"></textarea>
         <button type="submit">Sign Up</button>
+        <p>Already have an account? <a href="#" id="gotoLogin">Login</a></p>
       </form>
     </div>
   </div>
 
-  <!-- Login Form Modal -->
-  <div id="loginModal" class="modal">
+  <!-- Login Form -->
+  <div id="loginModal" class="modal active">
     <div class="modal-content">
       <span class="close" id="closeLogin">&times;</span>
       <h2>Login</h2>
       <form id="loginForm" action="login.php" method="POST">
-        <input type="email" name="email" placeholder="Email" required><br>
-        <input type="password" name="password" placeholder="Password" required><br>
+        <input type="email" name="email" placeholder="Email" required />
+        <input type="password" name="password" placeholder="Password" required />
         <button type="submit">Login</button>
-        <p>Create new account<button id="openSignup" id="closeLogin">Sign Up</button></p>
+        <p>Don't have an account? <a href="#" id="gotoSignup">Sign Up</a></p>
       </form>
     </div>
-  </div>
-
-  <!-- Main content -->
-  <div class="container">
-    <button id="openSignup">Sign Up</button>
-    <button id="openLogin">Login</button>
   </div>
 
   <script src="script.js"></script>
